fix 3px misalignment of drawer

--- a/src/header/css/header-menus.pcss
+++ b/src/header/css/header-menus.pcss
@@ -584,7 +584,6 @@
 		-webkit-overflow-scrolling: touch;
 		-ms-overflow-style: -ms-autohiding-scrollbar;
 		left: 0;
-		margin-top: -3px;
 		overflow-x: hidden;
 		overflow-y: auto;
 		position: absolute;
